# c--

./: .gitignore  CMakeLists.txt  README.md  auto.sh
include/: argument.h  assemble.h  codegen.h  content.h  files.h  linker.h  log.h  macro.h  tokenize.h
src/: argument.cpp  assemble.cpp  files.cpp  linker.cpp  main.cpp  tokenize.cpp
tests/: 1.c  2.c  hello.c  hello.s
